--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass-loader": "^7.1.0"
   },
   "dependencies": {
+    "flatpickr": "^4.5.7",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-router-dom": "^5.0.0"
   }
