--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-burger-menu": "^2.6.6",
     "react-flatpickr": "^3.7.1",
+    "react-markdown": "^4.0.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-simplemde-editor": "^4.0.0",
