--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
     "flatpickr": "^4.5.7",
+    "leaflet-geosearch": "^2.7.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-burger-menu": "^2.6.6",
